--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -2,12 +2,7 @@ name: Tests
 on:
   push:
     branches:
-      - master
-      - 'release-*'
-  pull_request:
-      branches:
-        - master
-        - 'release-*'
+      - main
 jobs:
   e2e-test:
     runs-on: ubuntu-latest
@@ -19,4 +14,4 @@ jobs:
       - name: Two
         run: |
           echo "Hi"
-          
+
