--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -7,6 +7,9 @@ jobs:
   e2e-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: browser-actions/setup-chrome@v1
+          with:
+            chrome-version: 116
       - name: Check
         run: |
           echo "Installed chrome version ..."
