--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -10,6 +10,7 @@ jobs:
       - name: Install chrome
         run: |
           CHROME_VERSION="116.0.5845.225"
+          sudo apt-get update
           sudo apt-get install -y google-chrome-stable=${CHROME_VERSION}
       - name: Check
         run: |
