Remove existing link

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -13,6 +13,7 @@ jobs:
           sudo apt-get install -y wget unzip
           wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6028.0/linux64/chrome-linux64.zip
           unzip chrome-linux64.zip
+          sudo rm /usr/bin/google-chrome
           sudo ln -s $PWD/chrome-linux64/chrome /usr/bin/google-chrome
           google-chrome --version
       - name: Check
